--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "l1nk3d1n",
   "version": "1.0.0",
-  "description": "",
   "main": "test.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +13,16 @@
     "fs": "0.0.1-security",
     "node": "^16.6.1",
     "path": "^0.12.7",
+    "puppeteer": "^10.4.0",
     "request": "^2.88.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jonathancs/l1nk3d1n.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jonathancs/l1nk3d1n/issues"
+  },
+  "homepage": "https://github.com/jonathancs/l1nk3d1n#readme",
+  "description": ""
 }
