--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "fs": "0.0.1-security",
+    "jsontoxml": "^1.0.1",
     "node": "^16.6.1",
     "path": "^0.12.7",
     "puppeteer": "^10.4.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "xlsx": "^0.17.2"
   },
   "repository": {
     "type": "git",
